adding font types

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -49,6 +49,6 @@
  div.brainbook {
 
     div.branibox-serif {}
-    div.brainbox-mono {}
-    div.brainbox-{}
+    div.brainbox-san-serif {}
+    div.brainbox-monospace{}
  }
