--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,33 @@
+@font-face {
+  font-family: "Inconsolata-bold";
+  src: url("./fonts/inconsolata/static/Inconsolata-Bold.ttf");
+}
+
+@font-face {
+  font-family: "Inconsolata-regular";
+  src: url("./fonts/inconsolata/static/Inconsolata-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Inter-bold";
+  src: url("./fonts/inter/static/Inter-Bold.ttf");
+}
+
+@font-face {
+  font-family: "Inter-regular";
+  src: url("./fonts/inter/static/Inter-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Lora-bold";
+  src: url("./fonts/lora/static/Lora-Bold.ttf");
+}
+
+@font-face {
+  font-family: "Lora-regular";
+  src: url("./fonts/lora/static/Lora-Regular.ttf");
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -5,44 +35,14 @@
           box-sizing: border-box;
   border: none;
   outline: none;
-}
-
-@font-face {
-  font-family: "Inconsolata-regular";
-  src: local("../fonts/inconsolata/static/inconsolata-Regular.ttf");
-}
-
-@font-face {
-  font-family: "Inconsolata-bold";
-  src: local("../fonts/inconsolata/static/Inconsolata-Begular.ttf");
-}
-
-@font-face {
-  font-family: "Inconsolata-regular";
-  src: local("../fonts/inconsolata/static/Inconsolata-Regular.ttf");
-}
-
-@font-face {
-  font-family: "Inter-bold";
-  src: local("../fonts/inconsolata/static/Inter-Bold.ttf");
-}
-
-@font-face {
-  font-family: "Inter-regular";
-  src: local("../fonts/inconsolata/static/Inter-Regular.ttf");
-}
-
-@font-face {
-  font-family: "Lora-bold";
-  src: local("../fonts/inconsolata/static/Lora-Bold.ttf");
-}
-
-@font-face {
-  font-family: "Lora-regular";
-  src: local("../fonts/inconsolata/static/Lora-Regular.ttf");
+  font-family: "Inconsolata-Regular";
 }
 
 body {
   font-size: 16px;
+}
+
+div.brainbook {
+  font-family: Lora-Regular;
 }
 /*# sourceMappingURL=index.css.map */
