--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,53 +1,52 @@
- * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    border: none;
-    outline: none;
- }
-
- @font-face {
-    font-family: "Inconsolata-regular";
-    src: local("../fonts/inconsolata/static/inconsolata-Regular.ttf");
- }
 
  @font-face {
     font-family: "Inconsolata-bold";
-    src: local("../fonts/inconsolata/static/Inconsolata-Begular.ttf");
+    src: url("./fonts/inconsolata/static/Inconsolata-Bold.ttf");
  }
 
  @font-face {
     font-family: "Inconsolata-regular";
-    src: local("../fonts/inconsolata/static/Inconsolata-Regular.ttf");
+    src: url("./fonts/inconsolata/static/Inconsolata-Regular.ttf");
  }
 
 
 
  @font-face {
     font-family: "Inter-bold";
-    src: local("../fonts/inconsolata/static/Inter-Bold.ttf");
+    src: url("./fonts/inter/static/Inter-Bold.ttf");
  }
 
  @font-face {
     font-family: "Inter-regular";
-    src: local("../fonts/inconsolata/static/Inter-Regular.ttf");
+    src: url("./fonts/inter/static/Inter-Regular.ttf");
  }
 
  @font-face {
     font-family: "Lora-bold";
-    src: local("../fonts/inconsolata/static/Lora-Bold.ttf");
+    src: url("./fonts/lora/static/Lora-Bold.ttf");
  }
 
  @font-face {
     font-family: "Lora-regular";
-    src: local("../fonts/inconsolata/static/Lora-Regular.ttf");
+    src: url("./fonts/lora/static/Lora-Regular.ttf");
  }
+ 
+ * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    font-family: "Inconsolata-Regular";
+ }
+
+
  body {
     font-size: 16px;
  }
 
  div.brainbook {
-
+    font-family: Lora-Regular;
     div.branibox-serif {}
     div.brainbox-san-serif {}
     div.brainbox-monospace{}
