--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -54,5 +54,21 @@ div.brainbook nav.nav {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 1em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+div.brainbook nav.nav div.nav-side {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+div.brainbook nav.nav div.nav-side div.custom-drop-down {
+  margin-right: 1em;
 }
 /*# sourceMappingURL=index.css.map */
