--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 $padding: 1em;
+$margin-right: 1em;
  @font-face {
     font-family: "Inconsolata-bold";
     src: url("./fonts/inconsolata/static/Inconsolata-Bold.ttf");
@@ -55,5 +56,17 @@ $padding: 1em;
       display: flex;
       justify-content: space-between;
       padding: $padding;
+      align-items: center;
+
+      div.nav-side {
+         display: flex;
+         align-items: center;
+         div.custom-drop-down {
+            margin-right: $margin-right;
+         }
+
+         div.theme-toggle {}
+         div.toggle-container{}
+      }
     }
  }
