working on structure

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -71,4 +71,8 @@ div.brainbook nav.nav div.nav-side {
 div.brainbook nav.nav div.nav-side div.custom-drop-down {
   margin-right: 1em;
 }
+
+div.brainbook main.content {
+  padding: 1em;
+}
 /*# sourceMappingURL=index.css.map */
