--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 $padding: 1em;
 $margin-right: 1em;
+$input-border-radius: 20px;
  @font-face {
     font-family: "Inconsolata-bold";
     src: url("./fonts/inconsolata/static/Inconsolata-Bold.ttf");
@@ -45,7 +46,12 @@ $margin-right: 1em;
  body {
     font-size: 16px;
  }
-
+ button {
+   background: transparent;
+ }
+a {
+   text-decoration: none;
+}
  div.brainbook {
     font-family: Lora-Regular;
     div.branibox-serif {}
@@ -70,7 +76,33 @@ $margin-right: 1em;
       }
     }
 
+    div.input-container {
+      padding: $padding;
+      
+      div.input {
+         background: #eee;
+         display: flex;
+         padding: $padding;
+         padding-left: 10px;
+         border-radius: $input-border-radius;
+         form {
+            flex: 1;
+            input {
+               font-size: 1em;
+               background: transparent;
+               width: 100%;
+            }
+         }
+      }
+    }
+
     main.content {
       padding: $padding;
+
+      div.content-top {
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+      }
     }
  }
