--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -54,20 +54,23 @@ div.brainbook {
   font-family: Lora-Regular;
 }
 
-div.brainbook nav.nav {
+div.brainbook div.container {
+  padding: 1em;
+}
+
+div.brainbook div.container nav.nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1em;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-div.brainbook nav.nav div.nav-side {
+div.brainbook div.container nav.nav div.nav-side {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -76,15 +79,15 @@ div.brainbook nav.nav div.nav-side {
           align-items: center;
 }
 
-div.brainbook nav.nav div.nav-side div.custom-drop-down {
+div.brainbook div.container nav.nav div.nav-side div.custom-drop-down {
   margin-right: 1em;
 }
 
-div.brainbook div.input-container {
-  padding: 1em;
+div.brainbook div.container div.input-container {
+  padding: 1.5em 0;
 }
 
-div.brainbook div.input-container div.input {
+div.brainbook div.container div.input-container div.input {
   background: #eee;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -94,23 +97,19 @@ div.brainbook div.input-container div.input {
   border-radius: 20px;
 }
 
-div.brainbook div.input-container div.input form {
+div.brainbook div.container div.input-container div.input form {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
 }
 
-div.brainbook div.input-container div.input form input {
+div.brainbook div.container div.input-container div.input form input {
   font-size: 1em;
   background: transparent;
   width: 100%;
 }
 
-div.brainbook main.content {
-  padding: 1em;
-}
-
-div.brainbook main.content div.content-top {
+div.brainbook div.container main.content div.content-top {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -120,5 +119,47 @@ div.brainbook main.content div.content-top {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  max-width: 100%;
+  padding: 1em 0;
+}
+
+div.brainbook div.container main.content div.content-top div.left h1 {
+  margin-bottom: 8px;
+}
+
+div.brainbook div.container main.content div.content-top button.audio svg.play-btn {
+  width: 60px;
+}
+
+div.brainbook div.container main.content div.meaning-container div.meaning {
+  padding-top: 1em;
+}
+
+div.brainbook div.container main.content div.meaning-container div.meaning h3.part-of-speech {
+  margin-bottom: 1em;
+}
+
+div.brainbook div.container main.content div.meaning-container div.meaning p.meaning {
+  margin-bottom: .8em;
+}
+
+div.brainbook div.container main.content div.meaning-container div.meaning ul {
+  padding-left: 1em;
+}
+
+div.brainbook div.container main.content div.meaning-container div.meaning ul li {
+  margin-bottom: 1.5em;
+}
+
+div.brainbook div.container div.syn-an {
+  padding: 1em 0;
+}
+
+div.brainbook div.container div.syn-an div.syn {
+  margin-bottom: 1em;
+}
+
+div.brainbook div.container div.sources span a {
+  font-size: .8em;
 }
 /*# sourceMappingURL=index.css.map */
