--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -83,9 +83,10 @@ a {
                align-items: center;
                div.toggle-container{
                   margin-right: 8px;
-                  input#input:checked ~ label.toggle{
+                  input[type="checkbox"]:checked + label.toggle{
                      background:$secondary_two;
                      &::after {
+                        transition: all .5s;
                         border-radius: 15px;
                         left: calc(100% - (18px + 5px));
                         
@@ -100,6 +101,7 @@ a {
                      background: $toggle_background_color;
                      transition: all .5s;
                      &::after {
+                        transition: all .5s;
                         content: " ";
                         position: absolute;
                         height: 18px;
