--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -157,9 +157,11 @@ div.brainbook div.container div.input-container div.input form {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  background-color: inherit;
 }
 
 div.brainbook div.container div.input-container div.input form input {
+  background-color: inherit;
   font-size: 1em;
   background: transparent;
   width: 100%;
@@ -244,6 +246,14 @@ div.brainbook div.container div.sources span a {
 
 div.brainbook.dark-theme {
   background: #050505;
+  color: whitesmoke;
+}
+
+div.brainbook.dark-theme div.container div.input-container div.input {
+  background: #1f1f1f;
+}
+
+div.brainbook.dark-theme div.container div.input-container div.input form input {
   color: whitesmoke;
 }
 
