added ability to play audio

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -171,6 +171,13 @@ a {
                   }
                }
             button.audio {
+               &:hover {
+                  svg {
+                     g {
+                        
+                     }
+                  }
+               }
                &:disabled {
                   svg {
                      g {
