--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -216,7 +216,18 @@ a {
        }
    
        main.content {
-   
+         
+
+         div.no-search {
+            min-height: 150px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 3em 0;
+            p {
+               padding: 2em 3em;
+            }
+         }
          div.content-top {
             display: flex;
             justify-content: space-between;
@@ -357,5 +368,14 @@ a {
            }
         }
      }
+   }
+ }
+
+ @media screen and (min-width: 769px) {
+   div.brainbook {
+      div.container {
+         width: 750px;
+         margin:0 auto;
+      }
    }
  }
